# mipt-optimal-investing

./: .envrc  .gitignore  .pre-commit-config.yaml  MyStrategy.py  my-strategy-config.json  pyproject.toml  setup.cfg
rise_and_fall_patterns/: launch.sh  rise_and_fall_patterns_config.json  rise_and_fall_patterns_strategy.py  rise_and_fall_patterns_wandb.py
