[tool.poetry]
name = "mipt-optimal-investing"
version = "0.1.0"
description = ""
authors = []
packages = []


[tool.poetry.dependencies]
python = ">=3.9,<3.12"

numpy = "~1.26"
pandas = "~2.1"
pandas-ta = "~0.3.14b"

ccxt = "~4.1"
cryptography = "~41.0"
aiohttp = "~3.9"
SQLAlchemy = "~2.0"
python-telegram-bot = "~20.4"
httpx = "~0.24"
arrow = "~1.3"
cachetools = "~5.3"
requests = "~2.31"
urllib3 = "~2.1"
jsonschema = "~4.20"
TA-Lib = "~0.4"
finta = "~1.3"
technical = "~1.4"
tabulate = "~0.9"
pycoingecko = "~3.1"
jinja2 = "~3.1"
tables = "~3.9"
joblib = "~1.3"
rich = "~13.7"
pyarrow = "~14.0"

# find first, C search in arrays
py_find_1st = "~1.1"

# Load ticker files 30% faster
python-rapidjson = "~1.13"
# Properly format api responses
orjson = "~3.9"

# Notify systemd
sdnotify = "~0.3"

# API Server
fastapi = "~0.104"
pydantic = "~2.5"
uvicorn = "=0.24.0.post1"
pyjwt = "~2.8"
aiofiles = "~23.2"
psutil = "~5.9"

# Support for colorized terminal output
colorama = "~0.4"
# Building config files interactively
questionary = "~2.0"
prompt-toolkit = "~3.0"
# Extensions to datetime library
python-dateutil = "~2.8"

#Futures
schedule = "~1.2"

#WS Messages
websockets = "~12.0"
janus = "~1.0"

ast-comments = "~1.2"
packaging = "~23.1"
wandb = "~0.15"
# apply patch: https://github.com/freqtrade/freqtrade/pull/9703/files#diff-cd44df30653a000dc9bf50554a5af62b2d627fcfa7694687ba8da61cd7c37c94
freqtrade = {git = "git@github.com:freqtrade/freqtrade.git", rev = "2023.11"}

[tool.poetry.group.freqai.dependencies]
# Required for freqai
scikit-learn = "~1.1"
catboost = "~1.2"
lightgbm = "~4.1"
xgboost = "~2.0"
tensorboard = "~2.15"
datasieve = "~0.1"

[tool.poetry.group.plot.dependencies]
# Required for plot
plotly = "~5.18"

[tool.poetry.group.hyperopt.dependencies]
# Required for hyperopt
scipy = "~1.11"
scikit-learn = "~1.1"
scikit-optimize = "~0.9"
filelock = "~3.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "~3.5"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
line_length = 100
multi_line_output=0
lines_after_imports=2
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "**/user_data/*"]

[tool.ruff]
line-length = 120
extend-exclude = [".env"]
target-version = "py38"
extend-select = [
  "C90",    # mccabe
  # "N",    # pep8-naming
  "UP",     # pyupgrade
  "TID",    # flake8-tidy-imports
  # "EXE",  # flake8-executable
  "YTT",    # flake8-2020
  # "S",    # flake8-bandit
  # "DTZ",  # flake8-datetimez
  # "RSE",  # flake8-raise
  # "TCH",  # flake8-type-checking
  "PTH",    # flake8-use-pathlib
]

[tool.ruff.mccabe]
max-complexity = 12

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
